--- a/example.bib
+++ b/example.bib
@@ -373,3 +373,19 @@ eprint = {https://www.worldscientific.com/doi/pdf/10.1142/12294}
     author = "ATLAS Collaboration",
     year = "2018"
 }
+
+@article{PhysRevLett.121.121801,
+  title = {Observation of Higgs Boson Decay to Bottom Quarks},
+  author = {The CMS Collaboration.},
+  collaboration = {CMS Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {121},
+  issue = {12},
+  pages = {121801},
+  numpages = {20},
+  year = {2018},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.121.121801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.121.121801}
+}
