--- a/thesis/standard_model.tex
+++ b/thesis/standard_model.tex
@@ -45,7 +45,7 @@ The CMS detector is built in a layered, cylindrical geometry around the collisio
 \begin{figure}[h]
 \centering
     \includegraphics[width=15cm]{media/cms_cutview.png}
-    \caption{CMS Detector adapted from \cite{Sirunyan_2017}.}
+    \caption{Slice of the CMS Detector adapted from \cite{Sirunyan_2017}.}
     \label{fig:cms_overview}
 \end{figure}
 
