--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage{subcaption}
+\usepackage{placeins}
 
 \usepackage[acronym]{glossaries-extra}
 \makeglossaries
@@ -45,7 +46,7 @@
 
 
 % Do remember to remove the square bracket!
-\title{\textbf{A probabilistic approach for adversarial perturbation of integer-constraint features for Jet Flavour Tagging Algorithms in the CMS Experiment}}
+\title{\textbf{A probabilistic approach for adversarial perturbation of integer-constraint features for Jet-Flavour Tagging Algorithms in the CMS Experiment}}
 \author{Martin Waletzko}
 
 \faculty{Physics Institute III A}      % Faculty name
@@ -67,7 +68,7 @@
 % Abstract
 \begin{abstract}
 
-Adversarial attacks pose a significant challenge to the robustness of deep-learning models used in high-energy physics analyses. This thesis investigates the vulnerability of jet-flavour tagging algorithms within the Compact Muon Solenoid experiment to perturbations on both continuous and discrete input features. In addition to standard gradient-based methods such as Projected Gradient Descent (PGD), PIP is introduced – a probabilistic integer attack designed for discrete-valued physics inputs. The attack leverages instantaneous gradient information to assign feature-specific flip probabilities, enabling efficient perturbations without continuous relaxations. A combined PIP-PGD attack is further studied to target both feature domains simultaneously. Evaluation on DeepJet demonstrates that PIP can induce competitive degradation relative to PGD, with complementary effects when applied in conjunction. Adversarial training experiments show improved robustness to the targeted attack types, though with limited generalisation across unseen perturbations. These results highlight the importance of accounting for discrete-feature vulnerabilities in the development of resilient high energy physics machine learning models.
+Adversarial attacks pose a significant challenge to the robustness of deep-learning models used in high-energy physics analyses. This thesis investigates the vulnerability of jet-flavour tagging algorithms within the Compact Muon Solenoid experiment to perturbations specifically discrete input features. In addition to standard gradient-based methods such as Projected Gradient Descent (PGD), PIP is introduced – a probabilistic integer attack designed for discrete-valued physics inputs. The attack leverages instantaneous gradient information to assign feature-specific flip probabilities, enabling efficient perturbations without continuous relaxations. A combined PIP-PGD attack is further studied to target both feature domains simultaneously. Evaluation on DeepJet demonstrates that PIP can induce competitive degradation relative to PGD, with complementary effects when applied in conjunction. Adversarial training experiments show improved robustness to the targeted attack types, though with limited generalisation across unseen perturbations. These results highlight the importance of accounting for discrete-feature vulnerabilities in the development of resilient high energy physics machine learning models.
 
 \vfill
 \noindent\fbox{\parbox{0.95\textwidth}{
